# tinyprint-x6h

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: find_and_connect.py  print_pattern.py
tinyprint_x6h/: __init__.py  encoding.py  printer.py  protocol.py
